# skills-manage

./: .gitignore  CHANGELOG.md  CHANGELOG.zh.md  package.json
.factory/: init.sh  services.yaml
.factory/skills/react-frontend-worker/: SKILL.md
.factory/skills/tauri-rust-worker/: SKILL.md
docs/: builtin-agent-info-maintenance.md  desktop-design.md  research-report.md
release-notes/: 0.9.2.md  0.9.3.md  0.9.4.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  path_utils.rs
src-tauri/src/commands/: agents.rs  discover.rs  marketplace.rs  mod.rs  scanner.rs  settings.rs  skills.rs
src/components/discover/: DiscoverConfigDialog.tsx
src/components/marketplace/: GitHubRepoImportWizard.tsx
src/components/platform/: SkillCard.tsx
src/components/settings/: BuiltinAgentEditDialog.tsx  BuiltinAgentSection.tsx
src/components/skill/: UnifiedSkillCard.tsx
src/i18n/locales/: en.json  zh.json
src/lib/: scrollRestoration.ts
src/pages/: CentralSkillsView.tsx  CollectionView.tsx  CollectionsListView.tsx  DiscoverView.tsx  MarketplaceView.tsx  PlatformView.tsx  SettingsView.tsx
src/stores/: centralSkillsStore.ts  discoverStore.ts  settingsStore.ts  skillStore.ts
src/test/: CentralSkillsView.test.tsx  CollectionView.test.tsx  CollectionsListView.test.tsx  DiscoverConfigDialog.test.tsx  DiscoverView.test.tsx  MarketplaceView.test.tsx  PlatformView.test.tsx  SettingsView.test.tsx  SkillCard.test.tsx  centralSkillsStore.test.ts  scrollRestoration.test.ts  settingsStore.test.ts  skillStore.test.ts
src/types/: index.ts
(+10 files in other folders)
